fix: pub standards, infrastructure, typo

--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -54,7 +54,7 @@ See also: [Crossref's documentation on **linking datasets** to published items](
 *Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to an article to be published.*
 :::
 
-Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for a whole datasets published, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should provide a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement. This will ensure that all data underlying a published manuscript can be linked to an article in the data availability statement and the CrossRef metadata of that article.
+Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for a whole published datasets, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should provide a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement. This will ensure that all data underlying a published manuscript can be linked to an article in the data availability statement and the CrossRef metadata of that article.
 
 ### Embargo Periode and Metadata Accessibility
 
@@ -62,7 +62,7 @@ Field-specific research data repositories may provide DOIs to reference individu
 *Datasets published with an embargo period should have inaccessible data but accessible metadata.*
 :::
 
-While an **embargo** period restricts access to a published dataset, the **metadata should be accessible**. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. Findable and accesible metadata is required to link articles and datasets, as DOIs to datasets need to be **validated** before the metadata record of articles gets updated.
+While an **embargo** period restricts access to a published dataset, the **metadata should be accessible**. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. Findable and accessible metadata is required to link articles and datasets, as DOIs to datasets need to be **validated** before the metadata record of articles gets updated.
 
 ### Scholix.org
 
@@ -70,7 +70,7 @@ While an **embargo** period restricts access to a published dataset, the **metad
 *Research data repositories should contribute to Scholix.org.*
 :::
 
-[**Scholix**](https://doi.org/10.1045/january2017-burton) provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing an **high-level interoperability framework for exchanging information about these links**. Thus, Scholix hubs, such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/), contribute information on their metadata records, which contain information on connected digital objects. This information is used by academic publishers to discover datasets that correspond to an article but were published after the article was published, which allows the metadata of the article to be updated with links to the dataset.
+[**Scholix**](https://doi.org/10.1045/january2017-burton) provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing a **high-level interoperability framework for exchanging information about these links**. Thus, Scholix hubs, such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/), contribute information on their metadata records, which contain information on connected digital objects. This information is used by academic publishers to discover datasets that correspond to an article but were published after the article was published, which allows the metadata of the article to be updated with links to the dataset.
 
 ### Datasets under Review
 
@@ -78,7 +78,7 @@ While an **embargo** period restricts access to a published dataset, the **metad
 *Research data repositories should provide access to datasets under review.*
 :::
 
-In order to include datasets in the review process of manuscripts, repositories should provide access to reviewers. It is strongly encouraged that repositories provide a status *in review* beside of the statuses *draft* and *published*. **A dataset under review should not be editable but should be accessible** via an URL, while the DOI is not yet discoverable and the DOI metadata is not yet accessible as the dataset is not yet published.
+In order to include datasets in the review process of manuscripts, repositories should provide access to reviewers. It is strongly encouraged that repositories provide a status *in review* beside of the statuses *draft* and *published*. **A dataset under review should not be editable but should be accessible** via a URL, while the DOI is not yet discoverable and the DOI metadata is not yet accessible as the dataset is not yet published.
 
 ### Reviewer Access to Datasets under Review
 
@@ -106,7 +106,7 @@ I commented this out, as the DOI should be registered when something gets publis
 *Research data repositories should provide the repository name as 'publisher' as well as a 'publisherIdentifier' in a dataset's DataCite metadata.*
 :::
 
-DOI prefixes are specific to each registrant. As each registrant may host more than one repository, the prefix is not neccesarily specific to an individual repository. As stated by [**DataCite's documenation on the publisher field**](https://datacite-metadata-schema.readthedocs.io/en/4.5/properties/publisher/#publisher), the required `publisher` field is used to formulate the citation of the data and should therefore be the repository name. In addition, a repository identifier such as the re3data identifier should be provided to unambiguously identify the repository. Both fields should be automatically populated by the repository and should not be editable by the submitter. 
+DOI prefixes are specific to each registrant. As each registrant may host more than one repository, the prefix is not necessarily specific to an individual repository. As stated by [**DataCite's documentation on the publisher field**](https://datacite-metadata-schema.readthedocs.io/en/4.5/properties/publisher/#publisher), the required `publisher` field is used to formulate the citation of the data and should therefore be the repository name. In addition, a repository identifier such as the re3data identifier should be provided to unambiguously identify the repository. Both fields should be automatically populated by the repository and should not be editable by the submitter. 
 
 In the case of RADAR4Chem the relationship would be described as follows:
 
@@ -139,15 +139,15 @@ As the process of adding metadata via a metadata editor can be error-prone, crea
 *Research data repositories should inform authors and data curators about possible rights conflicts for the abstract field in the datasets DataCite metadata.*
 :::
 
-Dataset's should have their **own description as an abstract**. Copying the related article abstract can results in a **rights conflict** with the respective acedemic publisher. This is particularly the case in German law. Authors and data curators should be informed of this conflict, e.g. via a **tooltip** when adding metadata using a metadata editor.
+Dataset's should have their **own description as an abstract**. Copying the related article abstract can result in a **rights conflict** with the respective academic publisher. This is particularly the case in German law. Authors and data curators should be informed of this conflict, e.g. via a **tooltip** when adding metadata using a metadata editor.
 
-### Group Licenes
+### Group Licences
 
 :::tip Standard
-*In research data repositories, licences should be grouped into research data licenses and software licenses.*
+*In research data repositories, licences should be grouped into research data licences and software licences.*
 :::
 
-Repositories often tend to provide confusingly long lists of licences. Furthermore, **licenses** differ for datasets and software. Providing a **grouping** will greatly assit authors in selecting from the correct set. 
+Repositories often tend to provide confusingly long lists of licences. Furthermore, **licences** differ for datasets and software. Providing a **grouping** will greatly assist authors in selecting from the correct set. 
 
 ### Encourage Creative Commons Licences
 
@@ -155,7 +155,7 @@ Repositories often tend to provide confusingly long lists of licences. Furthermo
 *Research data repositories should encourage researchers to choose a Creative Commons licence to simplify the landscape of licences and their choice.*
 :::
 
-In line with grouping licences between software and datasets, pointing authors towards the selection of [**Creative Commons (CC)**](https://creativecommons.org/) license alleviates the selection process. When publishing research data, Creative Commons licences that are no more restrictive than CC BY are strongly recommended.
+In line with grouping licences between software and datasets, pointing authors towards the selection of [**Creative Commons (CC)**](https://creativecommons.org/) licence alleviates the selection process. When publishing research data, Creative Commons licences that are no more restrictive than CC BY are strongly recommended.
 
 ### Promote Least Restrictive Creative Commons Licences
 
@@ -163,7 +163,7 @@ In line with grouping licences between software and datasets, pointing authors t
 *Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can make reuse very difficult.*
 :::
 
-Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/)** and **[CC BY](https://creativecommons.org/licenses/by/4.0/)** as opposed to more restrictive licenses such as [CC BY-SA](https://creativecommons.org/licenses/by-sa/4.0/) or even [CC BY-NC-ND](https://creativecommons.org/licenses/by-nc-nd/4.0/).
+Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/)** and **[CC BY](https://creativecommons.org/licences/by/4.0/)** as opposed to more restrictive licences such as [CC BY-SA](https://creativecommons.org/licences/by-sa/4.0/) or even [CC BY-NC-ND](https://creativecommons.org/licences/by-nc-nd/4.0/).
 
 ## For Publishers and Journals
 
