--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -142,7 +142,7 @@ To assist in automated workflows, such as linking the datasets to the published 
 
 Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for a whole published datasets, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should provide a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement. This will ensure that all data underlying a published manuscript can be linked to an article in the data availability statement and the CrossRef metadata of that article.
 
-### Embargo Periode and Metadata Accessibility
+### Embargo Period and Metadata Accessibility
 
 :::tip Standard
 *Datasets published with an embargo period should have inaccessible data but accessible metadata.*
@@ -231,7 +231,7 @@ Repositories often tend to provide confusingly long lists of licences. Furthermo
 
 In line with grouping licences between software and datasets, pointing authors towards the selection of [**Creative Commons (CC)**](https://creativecommons.org/) licence alleviates the selection process. When publishing research data, Creative Commons licences that are no more restrictive than CC BY are strongly recommended.
 
-### Promote Least Restrictive Creative Commons Licences
+### Promote the least Restrictive Creative Commons Licences
 
 :::tip Standard
 *Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can make reuse very difficult.*
